kubernetes/adguardhome/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
  - name: metrics
    targetPort: metrics
    port: 9617
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: adguardhome
spec:
  loadBalancerIP: 10.106.0.31
  type: LoadBalancer
  ports:
  - name: dns-tcp
    targetPort: dns-tcp
    port: 53
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: adguardhome
spec:
  loadBalancerIP: 10.106.0.30
  type: LoadBalancer
  ports:
  - name: dns-udp
    targetPort: dns-udp
    port: 53
    protocol: UDP
