kubernetes/adguardhome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "adguardhome"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
  name: adguardhome
spec:
  ingressClassName: nginx-internal
  rules:
  - host: adguard.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: http
            port:
              number: 80
        path: /
        pathType: Prefix
